# routes/developerRoutes.js
@@ -1,17 +1,21 @@
 const express = require('express');
 const router = express.Router();
+
+const ensureAuth = require('../middleware/ensureAuth');
+const validateDeveloper = require('../middleware/validateDeveloper');
+
 const {
   getAllDevelopers,
+  getDeveloper,
   createDeveloper,
-    updateDeveloper,
-    deleteDeveloper
+  updateDeveloper,
+  deleteDeveloper
 } = require('../controllers/developerController');
-const { validateDeveloper } = require('../middleware/validateDeveloper');
 
 router.get('/', getAllDevelopers);
-router.post('/', validateDeveloper, createDeveloper);
-router.put('/:id', validateDeveloper, updateDeveloper);
-router.delete('/:id', deleteDeveloper);
-
+router.get('/:id', getDeveloper);
+router.post('/', ensureAuth, ...validateDeveloper, createDeveloper);
+router.put('/:id', ensureAuth, ...validateDeveloper, updateDeveloper);
+router.delete('/:id', ensureAuth, deleteDeveloper);
 
 module.exports = router;
